syntax = "proto3";
package proto.grpc;

message GoodbyeRequest {
    int32 id = 1;
    string host = 2;
    string port = 3;
    int32 district = 4;
}

message GoodbyeResponse {
    string message = 1;
}


service GoodbyeService {
    rpc goodbye(GoodbyeRequest) returns (GoodbyeResponse);
    rpc streamGoodbye(GoodbyeRequest) returns (stream GoodbyeResponse);
}
